<resources>
    <string name="app_name">MedicabDriver</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password_prompt">Password</string>
    <string name="email_prompt">Email</string>
    <string name="login_text">Login</string>
    <string name="app_icon">App Icon</string>
    <string name="signup_prompt">Wanna Create A New Account? Signup</string>
    <string name="login_prompt">Already Have an Accoun? Login</string>
    <string name="title_activity_driver_home_page">Map</string>
    <string name="request_received">Request Received</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>