<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageNotificationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:background="#fafafa"
        android:elevation="16dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/request_receive_message"
            android:text="@string/request_received"
            android:textSize="20sp"
            android:textColor="#212121"
            android:textStyle="bold"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reject"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/reject_request"
            android:textSize="12sp"
            android:background="#ff0000"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="32dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/accept_request"
            android:layout_marginEnd="12dp"
            android:background="#ff0000"
            android:textSize="12sp"
            app:layout_constraintRight_toLeftOf="@id/reject_request"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>